--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -3,7 +3,7 @@ spring:
     name: "demo"
   r2dbc:
     initialize-schema: "embedded"
-    url: "r2dbc:h2:mem:///testdb;"
+    url: "r2dbc:h2:mem:///testdb;DB_CLOSE_ON_EXIT=TRUE;"
     username: sa
     password:
 server:
@@ -19,3 +19,5 @@ logging:
     io.r2dbc.spi: DEBUG
 domain:
   name: http://localhost:3000
+mfa:
+  secret: ${MFA_SECRET_KEY:Undefined} # Make sure to encode to Base64
