--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.3</version>
+				<configuration>
+					<rerunFailingTestsCount>2</rerunFailingTestsCount> <!-- Will retry failing tests 2 times -->
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
