--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,10 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Setup SSL
+        run: |
+          chmod 777 build_ssl.sh
+          ./ssl_build.sh
+
       - name: Test
         run: mvn -B clean verify
