--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,15 +1,3 @@
-#spring:
-#  application:
-#    name: "demo"
-#server:
-#  port: 8080
-#management:
-#  endpoints:
-#    web:
-#      base-path: "/manage"
-#logging:
-#  level:
-#    root: "INFO"
 spring:
   application:
     name: "demo"
@@ -41,6 +29,8 @@ logging:
     root: "DEBUG"
     org.springframework.data.r2dbc: INFO
     io.r2dbc.spi: INFO
+jwt:
+  secret: ${JWT_SECRET_KEY:Undefined}
 domain:
   name: http://localhost:3000
 mfa:
